--- a/career.ipynb
+++ b/career.ipynb
@@ -4,26 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The first big project - Professionally You!\n",
-    "\n",
-    "### And, Tool use.\n",
-    "\n",
-    "### But first: introducing Pushover\n",
-    "\n",
-    "Pushover is a nifty tool for sending Push Notifications to your phone.\n",
-    "\n",
-    "It's super easy to set up and install!\n",
-    "\n",
-    "Simply visit https://pushover.net/ and click 'Login or Signup' on the top right to sign up for a free account, and create your API keys.\n",
-    "\n",
-    "Once you've signed up, on the home screen, click \"Create an Application/API Token\", and give it any name (like Agents) and click Create Application.\n",
-    "\n",
-    "Then add 2 lines to your `.env` file:\n",
-    "\n",
-    "PUSHOVER_USER=_put the key that's on the top right of your Pushover home screen and probably starts with a u_  \n",
-    "PUSHOVER_TOKEN=_put the key when you click into your new application called Agents (or whatever) and probably starts with an a_\n",
-    "\n",
-    "Finally, click \"Add Phone, Tablet or Desktop\" to install on your phone."
+    "## Professionally You!\n",
    ]
   },
   {
@@ -506,45 +487,6 @@
     "5. ALSO: delete the README file that Gradio may have created inside this 1_foundations folder (otherwise it won't ask you the questions the next time you do a gradio deploy)\n"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/exercise.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#ff7800;\">Exercise</h2>\n",
-    "            <span style=\"color:#ff7800;\">• First and foremost, deploy this for yourself! It's a real, valuable tool - the future resume..<br/>\n",
-    "            • Next, improve the resources - add better context about yourself. If you know RAG, then add a knowledge base about you.<br/>\n",
-    "            • Add in more tools! You could have a SQL database with common Q&A that the LLM could read and write from?<br/>\n",
-    "            • Bring in the Evaluator from the last lab, and add other Agentic patterns.\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"margin: 0; text-align: left; width:100%\">\n",
-    "    <tr>\n",
-    "        <td style=\"width: 150px; height: 150px; vertical-align: middle;\">\n",
-    "            <img src=\"../assets/business.png\" width=\"150\" height=\"150\" style=\"display: block;\" />\n",
-    "        </td>\n",
-    "        <td>\n",
-    "            <h2 style=\"color:#00bfff;\">Commercial implications</h2>\n",
-    "            <span style=\"color:#00bfff;\">Aside from the obvious (your career alter-ego) this has business applications in any situation where you need an AI assistant with domain expertise and an ability to interact with the real world.\n",
-    "            </span>\n",
-    "        </td>\n",
-    "    </tr>\n",
-    "</table>"
-   ]
-  }
  ],
  "metadata": {
   "kernelspec": {
