--- a/career.ipynb
+++ b/career.ipynb
@@ -4,17 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Professionally You!\n",
+    "## Professionally You!\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import json\n",
@@ -26,24 +24,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The usual start\n",
-    "\n",
     "load_dotenv(override=True)\n",
     "openai = OpenAI()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# For pushover\n",
-    "\n",
     "pushover_user = os.getenv(\"PUSHOVER_USER\")\n",
     "pushover_token = os.getenv(\"PUSHOVER_TOKEN\")\n",
     "pushover_url = \"https://api.pushover.net/1/messages.json\""
@@ -206,11 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This function can take a list of tool calls, and run them. This is the IF statement!!\n",
     "\n",
     "def handle_tool_calls(tool_calls):\n",
     "    results = []\n",
@@ -218,8 +211,6 @@
     "        tool_name = tool_call.function.name\n",
     "        arguments = json.loads(tool_call.function.arguments)\n",
     "        print(f\"Tool called: {tool_name}\", flush=True)\n",
-    "\n",
-    "        # THE BIG IF STATEMENT!!!\n",
     "\n",
     "        if tool_name == \"record_user_details\":\n",
     "            result = record_user_details(**arguments)\n",
@@ -259,11 +250,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is a more elegant way that avoids the IF statement.\n",
     "\n",
     "def handle_tool_calls(tool_calls):\n",
     "    results = []\n",
@@ -327,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,11 +329,9 @@
     "model_name = \"llama-3.3-70b-versatile\"\n",
     "\n",
     "def chat(message, history, tools=None):\n",
-    "    # Clean history messages - remove any unsupported properties like 'metadata'\n",
     "    clean_history = []\n",
     "    for msg in history:\n",
     "        if isinstance(msg, dict):\n",
-    "            # Only keep 'role' and 'content' properties\n",
     "            clean_msg = {\"role\": msg[\"role\"], \"content\": msg[\"content\"]}\n",
     "            clean_history.append(clean_msg)\n",
     "        else:\n",
@@ -353,20 +341,16 @@
     "    done = False\n",
     "    \n",
     "    while not done:\n",
-    "        # Create the API call parameters\n",
     "        call_params = {\n",
     "            \"model\": model_name,\n",
     "            \"messages\": messages\n",
     "        }\n",
-    "        \n",
-    "        # Only add tools if they're provided\n",
     "        if tools:\n",
     "            call_params[\"tools\"] = tools\n",
     "        \n",
     "        response = groq.chat.completions.create(**call_params)\n",
     "        finish_reason = response.choices[0].finish_reason\n",
     "        \n",
-    "        # If the LLM wants to call a tool, we do that!\n",
     "        if finish_reason == \"tool_calls\":\n",
     "            message = response.choices[0].message\n",
     "            tool_calls = message.tool_calls\n",
@@ -427,66 +411,7 @@
     "\n",
     "gr.ChatInterface(chat_with_tools, type=\"messages\").launch()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## And now for deployment\n",
-    "\n",
-    "This code is in `app.py`\n",
-    "\n",
-    "We will deploy to HuggingFace Spaces. Thank you student Robert M for improving these instructions.\n",
-    "\n",
-    "Before you start: remember to update the files in the \"me\" directory - your LinkedIn profile and summary.txt - so that it talks about you!  \n",
-    "Also check that there's no README file within the 1_foundations directory. If there is one, please delete it. The deploy process creates a new README file in this directory for you.\n",
-    "\n",
-    "1. Visit https://huggingface.co and set up an account  \n",
-    "2. From the Avatar menu on the top right, choose Access Tokens. Choose \"Create New Token\". Give it WRITE permissions.\n",
-    "3. Take this token and add it to your .env file: `HF_TOKEN=hf_xxx` and see note below if this token doesn't seem to get picked up during deployment  \n",
-    "4. From the 1_foundations folder, enter: `uv run gradio deploy` and if for some reason this still wants you to enter your HF token, then interrupt it with ctrl+c and run this instead: `uv run dotenv -f ../.env run -- uv run gradio deploy` which forces your keys to all be set as environment variables   \n",
-    "5. Follow its instructions: name it \"career_conversation\", specify app.py, choose cpu-basic as the hardware, say Yes to needing to supply secrets, provide your openai api key, your pushover user and token, and say \"no\" to github actions.  \n",
-    "\n",
-    "#### Extra note about the HuggingFace token\n",
-    "\n",
-    "A couple of students have mentioned the HuggingFace doesn't detect their token, even though it's in the .env file. Here are things to try:   \n",
-    "1. Restart Cursor   \n",
-    "2. Rerun load_dotenv(override=True) and use a new terminal (the + button on the top right of the Terminal)   \n",
-    "3. In the Terminal, run this before the gradio deploy: `$env:HF_TOKEN = \"hf_XXXX\"`  \n",
-    "Thank you James and Martins for these tips.  \n",
-    "\n",
-    "#### More about these secrets:\n",
-    "\n",
-    "If you're confused by what's going on with these secrets: it just wants you to enter the key name and value for each of your secrets -- so you would enter:  \n",
-    "`OPENAI_API_KEY`  \n",
-    "Followed by:  \n",
-    "`sk-proj-...`  \n",
-    "\n",
-    "And if you don't want to set secrets this way, or something goes wrong with it, it's no problem - you can change your secrets later:  \n",
-    "1. Log in to HuggingFace website  \n",
-    "2. Go to your profile screen via the Avatar menu on the top right  \n",
-    "3. Select the Space you deployed  \n",
-    "4. Click on the Settings wheel on the top right  \n",
-    "5. You can scroll down to change your secrets, delete the space, etc.\n",
-    "\n",
-    "#### And now you should be deployed!\n",
-    "\n",
-    "Here is mine: https://huggingface.co/spaces/ed-donner/Career_Conversation\n",
-    "\n",
-    "I just got a push notification that a student asked me how they can become President of their country 😂😂\n",
-    "\n",
-    "For more information on deployment:\n",
-    "\n",
-    "https://www.gradio.app/guides/sharing-your-app#hosting-on-hf-spaces\n",
-    "\n",
-    "To delete your Space in the future:  \n",
-    "1. Log in to HuggingFace\n",
-    "2. From the Avatar menu, select your profile\n",
-    "3. Click on the Space itself and select the settings wheel on the top right\n",
-    "4. Scroll to the Delete section at the bottom\n",
-    "5. ALSO: delete the README file that Gradio may have created inside this 1_foundations folder (otherwise it won't ask you the questions the next time you do a gradio deploy)\n"
-   ]
-  },
+  }
  ],
  "metadata": {
   "kernelspec": {
